--- a/force-app/main/default/lwc/meetingRooms/meetingRooms.html
+++ b/force-app/main/default/lwc/meetingRooms/meetingRooms.html
@@ -11,7 +11,7 @@
                 </ul>
             </lightning-layout-item>
             <lightning-layout-item size="8" padding="around-small">
-                You have selected123 Edit: {selectedMeetingRoom}
+                You have selected123 Edit123: {selectedMeetingRoom}
             </lightning-layout-item>
         </lightning-layout>
         
